# findata-downloader

./: README.md  pyproject.toml  requirements.txt
src/findata_downloader/: cli.py  utils.py
