[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "findata-downloader"
version = "0.1.0"
description = "CLI tool for downloading financial data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Giovanni Caberlotto", email = "caberlotto.giovanni@gmail.com"},
    {name = "Alberto Alessi"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click~=8.1.7",
    "yfinance~=0.2.38",
    "pandas~=2.2.2",
    "requests~=2.32.3",
    "pyarrow>=10.0.1; python_version < '3.12'",
    "pyarrow>=14.0.2; python_version >= '3.12'",
    "openpyxl~=3.1.2"
]

[project.scripts]
findata = "findata_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]  # Modifica cruciale: deve essere un array
include = ["findata_downloader*"]
exclude = []
namespaces = false