[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "findata-downloader"
version = "0.1.0"
description = "CLI tool for downloading financial data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Giovanni Caberlotto", email = "caberlotto.giovanni@gmail.com"},
    {name = "Alberto Alessi"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.7",
    "yfinance>=0.2.38",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "pyarrow>=16.0.0",
    "openpyxl>=3.1.2"
]

[project.scripts]
findata = "findata_downloader.cli:main"

[tool.setuptools]
packages = ["findata_downloader"]
package-dir = {"" = "src"}